@@ -1,3 +1,9 @@
+17 April 2009
+
+* Remove the right number of characters from the buffer when escape then
+  a cursor key (or other key prefixed by \033) is pressed. Reported by
+  Stuart Henderson.
+
 03 April 2009
 
 * rotate-window command. -U flag (default) for up, -D flag for down.
@@ -1198,7 +1204,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.271 2009-04-03 17:21:46 nicm Exp $
+$Id: CHANGES,v 1.272 2009-04-17 12:36:21 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
